--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -8,7 +8,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:fe25561d224ed4743af4c60938a59d0b",
         "GUID:03058786646e84a4587858e9302c3f41",
-        "GUID:5540e30183c82e84b954c033c388e06c"
+        "GUID:5540e30183c82e84b954c033c388e06c",
+        "GUID:3a1244d4f20698c4ba94c890f5a758c3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
