More file reorganization and assembly definitions

--- a/Assets/Tests/PlayMode/PlayMode.asmdef
+++ b/Assets/Tests/PlayMode/PlayMode.asmdef
@@ -5,7 +5,9 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Scripts",
-        "Unity.Netcode.Runtime"
+        "Unity.Netcode.Runtime",
+        "Movers",
+        "Raycast"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
