--- a/Assets/Scripts/Health/Health.asmdef
+++ b/Assets/Scripts/Health/Health.asmdef
@@ -2,7 +2,8 @@
     "name": "Health",
     "rootNamespace": "",
     "references": [
-        "GUID:1491147abca9d7d4bb7105af628b223e"
+        "GUID:1491147abca9d7d4bb7105af628b223e",
+        "GUID:3a1244d4f20698c4ba94c890f5a758c3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
