--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -11,7 +11,8 @@
         "GUID:5540e30183c82e84b954c033c388e06c",
         "GUID:3a1244d4f20698c4ba94c890f5a758c3",
         "GUID:2dc82d3b5b22bc644bbe13e329129c69",
-        "GUID:536c400339c5c824bb41d6cf0bb29553"
+        "GUID:536c400339c5c824bb41d6cf0bb29553",
+        "GUID:c70b70e9cb3c87d4f8642dd1576a7ae4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
