--- a/Assets/Scripts/Followers/Followers.asmdef
+++ b/Assets/Scripts/Followers/Followers.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:626070ea3273cb844a310aa4f53b31fa"
+        "GUID:626070ea3273cb844a310aa4f53b31fa",
+        "GUID:2dc82d3b5b22bc644bbe13e329129c69",
+        "GUID:3a1244d4f20698c4ba94c890f5a758c3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
