--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -13,7 +13,8 @@
         "GUID:536c400339c5c824bb41d6cf0bb29553",
         "GUID:c70b70e9cb3c87d4f8642dd1576a7ae4",
         "GUID:31d62d9890cb8c94f91126ae832b881e",
-        "GUID:3ca3227d2cbd25241b4fb15a27f6cdbc"
+        "GUID:3ca3227d2cbd25241b4fb15a27f6cdbc",
+        "GUID:807d6ef61b1016d45a50bcb937206162"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
