--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -14,7 +14,8 @@
         "GUID:c70b70e9cb3c87d4f8642dd1576a7ae4",
         "GUID:31d62d9890cb8c94f91126ae832b881e",
         "GUID:3ca3227d2cbd25241b4fb15a27f6cdbc",
-        "GUID:807d6ef61b1016d45a50bcb937206162"
+        "GUID:807d6ef61b1016d45a50bcb937206162",
+        "GUID:f41405871def0134e91fb882df7c13e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
