Moved nicks and teams to LobbyPlayerData
Removed nicks and teams from TeamManager;
Deleted LobbyNetwork;

Issue:
KeyNotFoundException when dying

TODO:
Remove _clientDead field from TeamManager;
This information should be gathered from HealthController;

--- a/Assets/Scripts/LobbyPlayerData/LobbyPlayerData.asmdef
+++ b/Assets/Scripts/LobbyPlayerData/LobbyPlayerData.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:807d6ef61b1016d45a50bcb937206162"
+        "GUID:807d6ef61b1016d45a50bcb937206162",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
