--- a/Assets/Tests/PlayMode/PlayMode.asmdef
+++ b/Assets/Tests/PlayMode/PlayMode.asmdef
@@ -7,7 +7,8 @@
         "Scripts",
         "Unity.Netcode.Runtime",
         "Movers",
-        "Raycast"
+        "Raycast",
+        "State"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
