--- a/Assets/Tests/PlayMode/PlayMode.asmdef
+++ b/Assets/Tests/PlayMode/PlayMode.asmdef
@@ -8,7 +8,8 @@
         "Unity.Netcode.Runtime",
         "Movers",
         "Raycast",
-        "State"
+        "State",
+        "Skin"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
