--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -16,7 +16,8 @@
         "GUID:3ca3227d2cbd25241b4fb15a27f6cdbc",
         "GUID:807d6ef61b1016d45a50bcb937206162",
         "GUID:f41405871def0134e91fb882df7c13e0",
-        "GUID:5b78a675276c10a42aa1be0be50673bd"
+        "GUID:5b78a675276c10a42aa1be0be50673bd",
+        "GUID:4772c4cbc880424459bc41ca74ec70e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
